OS-50 Eliminate a build warning